--- a/A:B_testing_experimentation_bayesian_frequentist.ipynb
+++ b/A:B_testing_experimentation_bayesian_frequentist.ipynb
@@ -10,7 +10,7 @@
     "from scipy.stats import norm, beta, ttest_ind\n",
     "import matplotlib.pyplot as plt\n",
     "##Setting the number of experiments\n",
-    "numberOfExperimentsToRun = 10000 # TODO change this to 10000\n",
+    "numberOfExperimentsToRun = 10000 \n",
     "rangeOfMeans = (-100.0, 100.0)\n",
     "# Approximately how many of the experiments will have a control that is the same as the treatment\n",
     "# It's approximate because we use a random number generator to determine if any individual experiment should not be different\n",
@@ -55,8 +55,8 @@
     "        numberOfSimulations = 10000 \n",
     "\n",
     "        # Generate samples from the sampling distributions for each group (control and treatment) \n",
-    "        # controlSamplesFromSamplingDistribution = [controlSamplingDistribution.rvs() for i in range(numberOfSimulations)]\n",
-    "        # treatmentSamplesFromSamplingDistribution = [treatmentSamplingDistribution.rvs() for i in range(numberOfSimulations)]\n",
+    "        \n",
+    "        \n",
     "\n",
     "         # Compare each pair of samples to see which one is greater and count how many times each group wins \n",
     "         # If it's a tie then flip a coin to decide who wins that round \n",
